--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,29 @@
-/* --color-primario-alfa:#d5b44ace; */
+.descripcion > div, .descripcion, .item__image, .ver__mas > div, .ver__mas {
+  width: 100%;
+  height: 100%;
+}
+
+.imagen, header .img__principal {
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+
+.text .degradado2, .text .degradado1 {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(213, 180, 74) 6%, rgba(213, 180, 74, 0.863) 94%, rgba(255, 255, 255, 0) 100%);
+  position: absolute;
+  width: 100%;
+  top: -8vh;
+  z-index: 1;
+}
+
+#main__nosotros h1, #main__contacto h1, #main__quehacer h1 {
+  text-align: center;
+  padding: 4vh 8vw;
+  text-shadow: 1px 1px 1px #000, 1px 1px 3px #000;
+  font-size: clamp(1.3rem, 3vw, 4rem);
+}
+
 .navbar-toggler-icon {
   --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28213, 181, 74%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
@@ -6,6 +31,9 @@
 .dorada__nav__a {
   color: #d5b54a;
   font-weight: 500;
+}
+.dorada__nav__a:hover {
+  color: #967c23;
 }
 
 .dorada__bg__nav {
@@ -17,10 +45,14 @@
   color: #d5b54a;
   font-weight: 500;
 }
+.dorada__nav__link:hover {
+  color: #967c23;
+}
 
 footer {
   background-color: #e7e7e5;
-  margin-bottom: 60px;
+  margin-bottom: 61px;
+  border-bottom: solid 1px #d5b54a;
 }
 footer i {
   color: #d5b54a;
@@ -34,11 +66,23 @@ footer a {
   font-family: "Courgette";
   color: #000;
 }
-
-.redes i {
-  padding-right: 2vw;
+footer .mail__geo a {
+  margin-left: 1vw;
+}
+footer .mail__geo a:hover {
+  text-decoration: underline;
+  color: #d5b54a;
+}
+footer .redes a {
+  padding: 1vw 1.5vw;
+  margin: 0.3vw;
 }
 
+header .img__principal {
+  width: 100%;
+  height: 100vh;
+  background-position: center 30%;
+}
 header .titulo {
   position: absolute;
   top: 10px;
@@ -48,62 +92,53 @@ header .titulo {
 header .titulo h1 {
   margin-bottom: 0;
   margin-top: 7rem;
-  text-shadow: 1px 1px 1px #000, 2px 2px 4px #000;
-  font-size: clamp(1.2rem, 4vw, 3.5rem);
+  text-shadow: 1px 1px 1px #000, 1px 1px 3px #000;
+  font-size: clamp(1.5rem, 4.5vw, 4rem);
 }
-header .titulo h4 {
+header .titulo h3 {
   margin-top: 1vh;
-  text-shadow: 1px 1px 1px #000, 2px 2px 4px #000;
+  text-shadow: 1px 1px 1px #000, 1px 1px 3px #000;
   font-size: clamp(0.7rem, 2.5vw, 2rem);
 }
 
-.img-principal {
-  width: 100%;
-  height: 100vh;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center 30%;
-}
-
 .intro {
-  background-color: rgba(213, 181, 74, 0.7);
-  height: 90vh;
+  background-color: transparent;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(213, 180, 74) 6%, rgba(213, 180, 74, 0.863) 94%, rgba(255, 255, 255, 0) 100%);
+  padding: 25vh 0;
+  position: relative;
+  top: -8vh;
 }
 
-.intro-parrafo {
+.intro__parrafo {
   font-size: clamp(1rem, 2.5vw, 1.5rem);
-  font-family: "Courgette";
   line-height: clamp(1.5rem, 3vw, 2.5rem);
   text-align: center;
-  text-shadow: 1px 1px 1px #000, 2px 2px 4px #000;
+  text-shadow: 1px 1px 1px #000, 1px 1px 3px #000;
 }
 
-#main-index .card-index {
+#main__index .card__index {
   text-decoration: none;
   color: #000;
 }
-#main-index .card-index:hover .ver-mas {
+#main__index .card__index:hover .ver__mas {
   opacity: 1;
 }
 
-.ver-mas {
+.ver__mas {
   position: absolute;
   top: 0;
-  width: 100%;
-  height: 100%;
   padding: 1rem;
-  background-color: rgba(213, 181, 74, 0.7);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 36%, rgba(213, 181, 74, 0.7) 70%);
   color: #fff;
   opacity: 0;
   border-radius: 10px;
-  text-shadow: 1px 1px 1px #000, 2px 2px 4px #000;
+  text-shadow: 1px 1px 1px #000, 1px 1px 3px #000;
+  transition: all 0.5s ease-in;
 }
-.ver-mas > div {
+.ver__mas > div {
   padding: 1rem;
   border: thin solid #fff;
   border-radius: 10px;
-  width: 100%;
-  height: 100%;
 }
 
 .dorada__img__card {
@@ -112,17 +147,17 @@ header .titulo h4 {
   font-size: clamp(1rem, 2vw, 1.2rem);
 }
 
-.container-galery {
+.container__galery {
   width: 100%;
 }
 
-.galery-wrapper {
+.galery__wrapper {
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
 
-.galery-item {
+.galery__item {
   position: relative;
   isolation: isolate;
   display: flex;
@@ -131,30 +166,30 @@ header .titulo h4 {
   margin: 0;
   opacity: 1;
   overflow: hidden;
+  transition: flex 0.5s, opacity 0.25s;
 }
-.galery-item:hover {
+.galery__item:hover {
   opacity: 1;
   flex-grow: 5;
   flex-basis: 100%;
 }
-.galery-item:hover .name {
+.galery__item:hover .name {
   opacity: 1;
+  transition: all 0.5s ease-in;
 }
-.galery-item:not(:hover) {
+.galery__item:not(:hover) {
   opacity: 0.75;
 }
 
-.item-image {
+.item__image {
   position: absolute;
   top: 0;
   right: 0;
   z-index: -1;
-  width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
-.item-description {
+.item__description {
   align-self: flex-end;
   text-transform: uppercase;
   color: #fff;
@@ -169,37 +204,46 @@ header .titulo h4 {
   padding: 10px;
   opacity: 0;
   border-radius: 0 40px 40px 0;
+  transform: translateY(-10px);
+}
+
+#main__quehacer h1 {
+  color: #d5b54a;
+  margin-top: 1rem;
 }
 
 .mapa {
   aspect-ratio: 9/16;
-  margin-top: 4vw;
+  margin-top: 2vw;
 }
 
-.icon-contacto {
+.icon__contacto {
   color: #d5b54a;
   font-size: clamp(3rem, 5vw, 4rem);
 }
 
-.redes-contacto {
+.redes__contacto {
   color: #d5b54a;
   font-size: clamp(2rem, 5vw, 3rem);
   margin-inline: 1vw;
 }
 
-#main-contacto h5 {
+#main__contacto h1 {
+  color: #d5b54a;
+}
+#main__contacto h5 {
   color: #d5b54a;
   font-size: 1.5rem;
 }
-#main-contacto small a {
+#main__contacto small a {
   font-size: 1rem;
   color: #000;
   font-family: "Courgette";
 }
-#main-contacto input, #main-contacto textarea {
+#main__contacto input, #main__contacto textarea {
   border-color: #d5b54a;
 }
-#main-contacto label {
+#main__contacto label {
   color: #000;
 }
 
@@ -208,85 +252,53 @@ form h3 {
   font-weight: 500;
 }
 
-.boton-form {
+.boton__form {
   background-color: #d5b54a;
   border: none;
   border-radius: 5px;
   width: 100%;
 }
 
-/* // Small devices (landscape phones, 576px and up) */
-/* / Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-  .galery-wrapper {
-    flex-direction: row;
-    height: 90vh;
-  }
-  .galery-item:hover {
-    flex-basis: 0;
-  }
-}
-/* // Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-  #main-index section article h3 {
-    margin-top: 0;
-  }
-  nav {
-    position: fixed !important;
-    height: 64px;
-    top: 0;
-  }
-  footer {
-    margin-bottom: 0;
-  }
-  .galery-wrapper {
-    margin-top: 60px;
-  }
-  .mapa {
-    margin-top: 90px;
-  }
-}
-/* // X-Large devices (large desktops, 1200px and up) */
-/* // XX-Large devices (larger desktops, 1400px and up) */
 body {
   font-family: "Playfair Display", serif;
-}
-
-p {
-  font-family: "Courgette";
+  font-weight: 500;
 }
 
 /* usado en index y que hacer */
-.section-card {
+.section__card {
+  overflow-x: hidden;
   align-items: center;
-  margin: 2vw 0;
+  margin-bottom: 4vh;
   border: solid thin #d5b54a;
   border-radius: 10px;
 }
-.section-card img {
+.section__card img {
   margin: 2vw 0;
   width: clamp(300px, 27vw, 400px);
   aspect-ratio: 4/3;
   border-radius: 5px;
   object-fit: cover;
 }
-.section-card article h3 {
+.section__card article h3 {
   margin-top: 2vw;
   text-align: center;
   color: #d5b54a;
 }
 
-/* ********** gastronomia ************* */
+/* ********** gastronomia y habitaciones ************* */
 .text {
-  background: rgba(213, 181, 74, 0.7);
+  background-color: #d5b54a;
   position: relative;
+}
+.text .degradado1 {
+  height: 110%;
+}
+.text .degradado2 {
+  height: 100%;
 }
 
 .imagen {
-  height: 45vw;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
+  height: 90vh;
   opacity: 0.8;
 }
 
@@ -299,23 +311,113 @@ p {
   z-index: 1;
   margin: 20px 15%;
   text-align: center;
-  text-shadow: 1px 1px 1px #000, 2px 2px 4px #000;
+  text-shadow: 1px 1px 1px #000, 1px 1px 3px #000;
 }
 
 .item__paralax {
-  text-shadow: 1px 1px 1px #000, 2px 2px 4px #000;
-  font-family: "Courgette";
+  position: relative;
+  text-shadow: 1px 1px 1px #000, 1px 1px 3px #000;
+  font-family: "Playfair Display", serif;
   list-style-type: square;
+  z-index: 2;
 }
 
 /* ******** nosotros *************** */
-.img-nosotros img {
+.img__nosotros img {
   width: 100%;
 }
 
-#main-nosotros section img {
-  aspect-ratio: 3/4;
+.integrantes:hover .descripcion {
+  opacity: 1;
+}
+
+.descripcion {
+  position: absolute;
+  bottom: 0;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 36%, rgba(213, 181, 74, 0.7) 70%);
+  color: #fff;
+  opacity: 0;
+  text-shadow: 1px 1px 1px #000, 1px 1px 3px #000;
+  transition: all 0.5s ease-in;
+}
+#main__nosotros h1 {
+  color: #fff;
+}
+#main__nosotros section img {
+  width: 100%;
+  aspect-ratio: 1/1;
   object-fit: cover;
+}
+
+@media (min-width: 768px) {
+  .galery__wrapper {
+    flex-direction: row;
+    height: 90vh;
+  }
+  .galery__item:hover {
+    flex-basis: 0;
+  }
+}
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  p {
+    font-family: "Courgette";
+  }
+  #main__index section article h3 {
+    margin-top: 0;
+  }
+  nav {
+    position: fixed !important;
+    height: 64px;
+    top: 0;
+  }
+  footer {
+    margin-bottom: 0;
+  }
+  footer .redes a:hover {
+    background-color: #d5b54a;
+    border-radius: 50%;
+  }
+  footer .redes a:hover i {
+    color: #fff;
+  }
+  /* pagina que hacer */
+  .galery__wrapper {
+    margin-top: 60px;
+  }
+  .mapa {
+    margin-top: 90px;
+  }
+  .dorada__nav__link {
+    display: inline-block;
+    position: relative;
+  }
+  .dorada__nav__link::after {
+    content: "";
+    position: absolute;
+    width: 80%;
+    height: 3px;
+    bottom: 0;
+    left: 10%;
+    background-color: #967c23;
+    transform: scaleX(0);
+    transform-origin: bottom center;
+    transition: transform 0.25s ease-out;
+  }
+  .dorada__nav__link:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom center;
+  }
+  /* pagina gastronomia y habitaciones */
+  .text .degradado1 {
+    height: 118%;
+  }
+  #main__contacto h1 {
+    margin-top: 64px;
+  }
+  .item__paralax {
+    font-family: "Courgette";
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
