--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -5,6 +5,10 @@
 .dorada__nav__a{
     color: $color-primario;
     font-weight: 500;
+
+    &:hover{
+        color:map-get($efectos, oscurecer);
+    }
 } 
 
 .dorada__bg__nav{
@@ -15,4 +19,9 @@
     font-size: 1.5vw;
     color: $color-primario;
     font-weight: 500;
+    
+    &:hover{
+        color:map-get($efectos, oscurecer);
+    }
+
 }
