--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -1,5 +1,14 @@
 
-header.titulo{
+header{
+    
+    .img__principal{
+        width: 100%;
+        height: 100vh;
+        @extend %imgPosition;
+        background-position: center 30% ;
+    }
+
+    .titulo{
         position: absolute;
         top:10px;
         color: $color-primario;
@@ -9,54 +18,54 @@ header.titulo{
             margin-bottom: 0;
             margin-top: 7rem;
             text-shadow: $sombra-texto;
-            font-size:clamp(1.2rem, 4vw, 3.5rem);
+            font-size:clamp(1.5rem, 4.5vw, 4rem);
         }
 
-        h4{
+        h3{
             margin-top: 1vh;
             text-shadow: $sombra-texto;
             font-size:clamp(0.7rem, 2.5vw, 2rem);
         }
 
+    } 
 } 
 
-.img-principal{
-    @extend %pantallaCompleta;
-    @extend %imgPosition;
-}
 
 .intro{
-    background-color: rgba($color-primario, 0.7);
-    height: 90vh;
+    background-color: transparent;
+    background: map-get($efectos, degradado );
+    padding:25vh 0;
+    position: relative;
+    top:-8vh;
 }
 
-.intro-parrafo{
+.intro__parrafo{
     font-size: clamp(1rem, 2.5vw, 1.5rem);
-    font-family: $font-texto;
     line-height: clamp(1.5rem, 3vw, 2.5rem);
     text-align: center;
     text-shadow: $sombra-texto;
 }
 
-#main-index .card-index{
+#main__index .card__index{
     text-decoration: none;
     color: $color-texto;
 
-    &:hover .ver-mas{
+    &:hover .ver__mas{
         opacity: 1;
     }
 }
 
-.ver-mas {
+.ver__mas {
     position: absolute;
     top:0;
     @extend %pantallaCompleta;
     padding: 1rem;
-    background-color: rgba($color-primario, 0.7);
+    background: linear-gradient(180deg, rgba(255,255,255,0) 36%, rgba(213,181,74,0.7) 70%);
     color: $color-font;
     opacity: 0;
     border-radius: 10px;
     text-shadow: $sombra-texto;
+    transition:map-get($efectos, aparecer);
 
         & > div {
             padding: 1rem;
