--- a/scss/componentes/_contacto.scss
+++ b/scss/componentes/_contacto.scss
@@ -34,6 +34,11 @@
         border-color:$color-primario;
     }
 
+    textarea{
+        height: 150px;
+        resize: none;
+    }
+
     label{
         color:$color-texto;
     }
